# genv

./: Cargo.toml  Makefile  README.md  genv-server.service
src/: client.rs  genv-server.rs  genv.rs  main.rs
